basic matrix operations

--- a/Content/code-template.ipynb
+++ b/Content/code-template.ipynb
@@ -4,26 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Titulo"
+    "# Title"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Descrição do algoritmo implementado neste código"
+    "Brief description of the algorithm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Coisas para importar"
+    "### Import the required stuff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -36,64 +36,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importar minhas funções de um arquivo externo"
+    "### Import my functions from an external file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import minhas_funcoes as mfun"
+    "import my_functions as mfun"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A função deve ter a seguinte estrutura:"
+    "The function must be defined as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "::python::\n",
-    "def minha_funcao():\n",
+    "def my_function():\n",
     "    \n",
     "    '''\n",
-    "    Descrição breve da função\n",
+    "    Brief description of the function\n",
     "    \n",
     "    \n",
     "    input\n",
     "    \n",
-    "    parâmetro de entrada 1: tipo de variável - descrição da variável\n",
-    "    parâmetro de entrada 2: tipo de variável - descrição da variável\n",
-    "    ...\n",
+    "    input1: variable type - description of the variable\n",
+    "    input2: variable type - description of the variable    \n",
+    "    \n",
     "    \n",
     "    output\n",
     "    \n",
-    "    parâmetro de saída 1: tipo de variável - descrição da variável\n",
-    "    parâmetro de saída 2: tipo de variável - descrição da variável\n",
-    "    ...\n",
+    "    output1: variable type - description of the variable\n",
+    "    output2: variable type - description of the variable\n",
+    "    \n",
     "    \n",
     "    '''\n",
     "    \n",
-    "    #inicialização de variáveis\n",
+    "    #create variables\n",
     "    \n",
-    "    #mensagens de erro\n",
-    "    #if ... :\n",
-    "    #    raise ValueError('mensagem de erro')\n",
-    "    #if ... :\n",
-    "    #    raise ValueError('mensagem de erro')\n",
-    "    #...\n",
+    "    #define assert statements\n",
+    "    #assert 'statement A' and 'statement B', 'error message 1'\n",
+    "    #assert 'statement A' == 'statement B', 'error message 2'\n",
+    "    #assert 'statement A' != 'statement B', 'error message 3'\n",
+    "    #assert 'statement A' <= 'statement B', 'error message 4'\n",
+    "    #assert 'statement A' or 'statement B', 'error message 5'\n",
     "\n",
-    "    #implementação da função\n",
+    "    #function code\n",
     "    \n",
-    "    #return saída1, saída2, ..."
+    "    #return output1, output2, ..."
    ]
   },
   {
@@ -111,14 +110,14 @@
    },
    "outputs": [],
    "source": [
-    "#Gerar o(s) input(s) da sua função."
+    "#Generate input values"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resultado da minha função"
+    "### Result produced by my function"
    ]
   },
   {
@@ -129,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "#Exemplo de mensagem de erro emitida pela sua função (opcional)."
+    "#Example of error message. Do not copy and paste the messages here! Run your function and violate the assertion statements"
    ]
   },
   {
@@ -140,54 +139,43 @@
    },
    "outputs": [],
    "source": [
-    "#Resultado gerado com a função definida no arquivo externo 'minhas_funcoes.py'."
+    "#Result produced by my function"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resultado proveniente de outra implementação"
+    "### Result produced by an independent code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Resultado proveniente de uma implementação independente, que pode ser feita em Python, por exemplo."
+    "#Result produced by an independent code"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Teste de validação"
+    "### Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.allclose(meu_resultado, python_resultado, rtol=1e-10, atol=1e-10)"
+    "np.allclose(my_result, python_result)"
    ]
   },
   {
