--- a/Content/other.ipynb
+++ b/Content/other.ipynb
@@ -46,14 +46,14 @@
     "\\vdots \\\\\n",
     "y_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$$ ."
+    "\\right]_{N \\times 1} \\: .$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Hadamard (or entrywise) product** (Horn and Johnson, 1994, chapter 5)"
+    "### [Hadamard](https://en.wikipedia.org/wiki/Matrix_multiplication#Hadamard_product) (or entrywise) product"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "x_{N} \\, y_{N}\n",
     "\\end{array}\n",
     "\\right]_{N \\times 1}\n",
-    "\\end{split}$$"
+    "\\end{split} \\: .$$"
    ]
   },
   {
@@ -83,25 +83,58 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Horn, R. A. and Johnson, C. R. Topics in matrix analysis, Cambridge University Press, 1994"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "This product can be represented by"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Produto direto (ou produto de Kronecker)**"
+    "    for i = 1:N\n",
+    "        z[i] = x[i]*y[i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or, by using the *colon* notation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    z[:] = x[:]*y[:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show that these two approaches are equivalent. To do this, follow the steps below:\n",
+    "\n",
+    "1. Create a function according to the first approach and save it in an external file\n",
+    "2. Create a function according to the second approach and save it in an external file\n",
+    "3. Use the `code-template.ipynb` for testing the two functions against each other"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kronecker (or direct, or [outer](https://en.wikipedia.org/wiki/Outer_product)) product"
    ]
   },
   {
@@ -123,122 +156,67 @@
     "                y_{1} \\, \\mathbf{x} & \\dots & y_{N} \\, \\mathbf{x}\n",
     "                \\end{array}\n",
     "                \\right]_{N \\times N}\n",
-    "\\end{split}$$"
+    "\\end{split} \\: .$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que, neste caso, o resultado é uma matriz quadrada de ordem $N$ igual ao número de elementos dos vetores $\\mathbf{x}$ e $\\mathbf{y}$. Contudo, os vetores $\\mathbf{x}$ e $\\mathbf{y}$ NÃO precisam ter o mesmo número de elementos. Considere, por exemplo, que o vetor $\\mathbf{x}$ é $N \\times 1$ e o vetor $\\mathbf{y}$ é $M \\times 1$, em que $N \\neq M$. Neste caso, a matriz $\\mathbf{M}$ é $N \\times M$ e NÃO é quadrada. "
+    "Notice that, in this case, the result is a square matrix with order $N$ equal to the number of elements of $\\mathbf{x}$ and $\\mathbf{y}$. However, this operation does not require that the vectors $\\mathbf{x}$ and $\\mathbf{y}$ have the same number of elements. Consider, for example, that $\\mathbf{x}$ is a $N \\times 1$ vector and that $\\mathbf{y}$ is a $M \\times 1$ vector, where $N \\neq M$. In this case, the matrix $\\mathbf{M}$ is $N \\times M$, e.g., it has the number of rows equal to the number of elements of $\\mathbf{x}$ and the number of colunms equal to the number of elements of $\\mathbf{y}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para mais informações:\n",
-    "\n",
-    "* http://mathworld.wolfram.com/VectorDirectProduct.html\n",
-    "\n",
-    "* Horn e Johnson (1994), Capítulo 4, Seção 4.2"
+    "The matrix $\\mathbf{M}$ can be represented by"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considere a situação em que o vetor $\\mathbf{x}$ é $N \\times 1$ e o vetor $\\mathbf{y}$ é $M \\times 1$. A matriz $\\mathbf{M}$ resultante do produto direto entre $\\mathbf{x}$ e $\\mathbf{y}$ pode ser particionada em linhas ou em colunas, tal como descrito abaixo:"
+    "    for i = 1:N\n",
+    "        for j = 1:M\n",
+    "            M[i,j] = x[i]*y[j]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{split}\n",
-    "    \\mathbf{M} \n",
-    "    & = \\left[\n",
-    "    \\begin{array}{ccc}\n",
-    "        m_{11} & \\cdots & m_{1M} \\\\\n",
-    "        \\vdots &        & \\vdots \\\\\n",
-    "        m_{N1} & \\cdots & m_{NM}\n",
-    "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\n",
-    "    & = \\left[\n",
-    "    \\begin{array}{c}\n",
-    "        \\mathbf{M}(1,:) \\\\\n",
-    "        \\vdots \\\\\n",
-    "        \\mathbf{M}(N,:)\n",
-    "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\\\\n",
-    "    & = \\left[\n",
-    "    \\begin{array}{ccc}\n",
-    "        \\mathbf{M}(:,1) &\n",
-    "        \\cdots &\n",
-    "        \\mathbf{M}(:,M)\n",
-    "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\: , \\\\\n",
-    "\\end{split}$$"
+    "or, according to the *colon notation*, by a *row partition*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $\\mathbf{M}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{M}$ e $\\mathbf{M}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{M}$."
+    "    for i = 1:N\n",
+    "        M[i,:] = x[i]*y[:]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dessa forma, a matriz $\\mathbf{M} = \\mathbf{x} \\otimes \\mathbf{y}^{\\top}$ pode ser calculada de duas maneiras diferentes:"
+    "or a *colounm partition*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
-    "*Usando a partição por linhas*\n",
-    "\n",
-    "for $i = 1:N$\n",
-    "\n",
-    "$\\quad \\quad \\mathbf{M}(i,:) = x_{i} \\, \\mathbf{y}^{\\top}$\n",
-    "    \n",
-    "end\n",
-    "\n",
-    "-----"
+    "    for j = 1:M\n",
+    "        M[:,j] = x[:]*y[j]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ou"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "*Usando a partição por colunas*\n",
-    "\n",
-    "for $j = 1:M$\n",
-    "\n",
-    "$\\quad \\quad \\mathbf{M}(:,j) = y_{j} \\, \\mathbf{x}$\n",
-    "    \n",
-    "end\n",
-    "\n",
-    "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Exercício"
+    "### Exercise 2"
    ]
   },
   {
@@ -247,7 +225,12 @@
     "collapsed": true
    },
    "source": [
-    "Implemente o produto elemento-a-elemento e o produto direto entre vetores. O produto direto deve ser implementado tanto usando a partição por linhas como a partição por colunas. Cada implementação deve estar em uma função diferente. As duas implementações do produto direto devem, **obrigatoriamente**, utilizar a função desenvolvida previamente para o produto entre um escalar e um vetor. **As implementações devem seguir o template da disciplina**."
+    "Show that these three approaches are equivalent. To do this, follow the steps below:\n",
+    "\n",
+    "1. Create a function according to the first approach and save it in an external file\n",
+    "2. Create a function according to the second approach and save it in an external file\n",
+    "3. Create a function according to the third approach and save it in an external file\n",
+    "3. Use the `code-template.ipynb` for testing the two functions against the python code shown below"
    ]
   },
   {
@@ -256,7 +239,14 @@
     "collapsed": true
    },
    "source": [
-    "###Exemplo de implementação em Python"
+    "#### Numpy example of the outer product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import numpy"
    ]
   },
   {
@@ -274,11 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Produto elemento-a-elemento**\n",
-    "\n",
-    "`z = x*y` ,\n",
-    "\n",
-    "em que z, x e y são arrays do numpy."
+    "Create a colunm vector using the functions [numpy.arange](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html) and [numpy.reshape](http://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html)"
    ]
   },
   {
@@ -289,24 +275,41 @@
    },
    "outputs": [],
    "source": [
-    "x = np.array([[2.],\n",
-    "              [4.],\n",
-    "              [6.]])\n",
-    "\n",
-    "y = np.array([[3.],\n",
-    "              [2.],\n",
-    "              [1.]])"
+    "x = np.arange(5.)\n",
+    "x = np.reshape(x, (x.size, 1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.],\n",
+       "       [ 1.],\n",
+       "       [ 2.],\n",
+       "       [ 3.],\n",
+       "       [ 4.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "z = x*y"
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a row vector by using the function [numpy.linspace](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linspace.html)"
    ]
   },
   {
@@ -315,55 +318,80 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 6.]\n",
-      " [ 8.]\n",
-      " [ 6.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print z"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Produto direto**\n",
-    "\n",
-    "`M = x*y.T` ,\n",
-    "\n",
-    "em que M, x e y são arrays do numpy."
+    "yT = np.linspace(0.6, 1.2, 3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.6,  0.9,  1.2])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = np.array([[1.],\n",
-    "              [2.],\n",
-    "              [3.]])\n",
-    "y = np.array([4.,5.])"
+    "yT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the outer product"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0. ,  0. ,  0. ],\n",
+       "       [ 0.6,  0.9,  1.2],\n",
+       "       [ 1.2,  1.8,  2.4],\n",
+       "       [ 1.8,  2.7,  3.6],\n",
+       "       [ 2.4,  3.6,  4.8]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x*yT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "M = x*y.T"
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{a}^{\\top}$ be an ${1 \\times 5}$ vector and $\\mathbf{b}^{\\top}$ be an ${1 \\times 3}$ vector as follows:"
    ]
   },
   {
@@ -372,29 +400,108 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  4.   5.]\n",
-      " [  8.  10.]\n",
-      " [ 12.  15.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print M"
+    "aT = np.arange(5.)\n",
+    "bT = np.linspace(11., 13., 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's also consider the two matrices $\\mathbf{A}$ and $\\mathbf{B}$, created from $\\mathbf{a}^{\\top}$ and $\\mathbf{b}^{\\top}$ by using the function [numpy.meshgrid](http://docs.scipy.org/doc/numpy/reference/generated/numpy.meshgrid.html):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "A, B = np.meshgrid(aT,bT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.,  2.,  3.,  4.],\n",
+       "       [ 0.,  1.,  2.,  3.,  4.],\n",
+       "       [ 0.,  1.,  2.,  3.,  4.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 11.,  11.,  11.,  11.,  11.],\n",
+       "       [ 12.,  12.,  12.,  12.,  12.],\n",
+       "       [ 13.,  13.,  13.,  13.,  13.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show that $\\mathbf{A} = \\mathbf{1}_{3 \\times 1} \\otimes \\mathbf{a}^{\\top}$ and $\\mathbf{B} = \\mathbf{b} \\otimes \\mathbf{1}_{1 \\times 5}$. Use the `code-template.ipynb` and follow the steps below:\n",
+    "\n",
+    "1. Create the inputs $\\mathbf{a}^{\\top}$, $\\mathbf{b}$, $\\mathbf{1}_{3 \\times 1}$ and $\\mathbf{1}_{1 \\times 5}$\n",
+    "\n",
+    "2. Calculate $\\mathbf{A}$ and $\\mathbf{B}$ by using the your outer product functions\n",
+    "\n",
+    "3. Calculate $\\mathbf{A}$ and $\\mathbf{B}$ by using the `numpy.meshgrid` function\n",
+    "\n",
+    "4. Compare the results by using the function `numpy.allclose`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Golub, G. H. and Van Loan, C. F. Matrix computations, 4th edition, Johns Hopkins University Press, 2013\n",
+    "\n",
+    "* Horn, R. A. and Johnson, C. R. Topics in matrix analysis, Cambridge University Press, 1994"
+   ]
   }
  ],
  "metadata": {
