--- a/Content/first_steps_Python/SMA/sma.ipynb
+++ b/Content/first_steps_Python/SMA/sma.ipynb
@@ -127,7 +127,7 @@
     "                   same number of elementos of the original data.\n",
     "    '''\n",
     "    \n",
-    "    assert data.size >= window_size, \\\n",
+    "    assert data.size > window_size, \\\n",
     "        'data must have more elements than window_size'\n",
     "    \n",
     "    #verify if window_size is odd\n",
