--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Produto entre uma matriz e um vetor"
+    "# Product of a matrix and a vector"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seja $\\mathbf{A}$ uma matriz $N \\times M$ e $\\mathbf{x}$ um vetor $M \\times 1$. A matriz $\\mathbf{A}$ pode ser particionada em linhas ou em colunas, tal como descrito abaixo:"
+    "Let $\\mathbf{A}$ be a $N \\times M$ matrix and $\\mathbf{x}$ be a $M \\times 1$ vector. $\\mathbf{A}$ can be represented by using a *row partition* or by a *colunm partition* as follows:"
    ]
   },
   {
@@ -29,111 +29,114 @@
     "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{c}\n",
-    "        \\mathbf{A}(1,:) \\\\\n",
+    "        \\mathbf{A}[1,:] \\\\\n",
     "        \\vdots \\\\\n",
-    "        \\mathbf{A}(N,:)\n",
+    "        \\mathbf{A}[N,:]\n",
     "    \\end{array}\n",
     "    \\right]_{N \\times M} \\\\\n",
     "    & = \\left[\n",
     "    \\begin{array}{ccc}\n",
-    "        \\mathbf{A}(:,1) &\n",
+    "        \\mathbf{A}[:,1] &\n",
     "        \\cdots &\n",
-    "        \\mathbf{A}(:,M)\n",
+    "        \\mathbf{A}[:,M]\n",
     "    \\end{array}\n",
-    "    \\right]_{N \\times M} \\: , \\\\\n",
-    "\\end{split}$$"
+    "    \\right]_{N \\times M}\n",
+    "\\end{split} \\: ,$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que $\\mathbf{A}(i,:)$, $i = 1, ..., N$, é o vetor $1 \\times M$ que representa a $i$-ésima linha de $\\mathbf{A}$ e $\\mathbf{A}(:,j)$, $j = 1, ..., M$, é o vetor $N \\times 1$ que representa a $j$-ésima coluna de $\\mathbf{A}$."
+    "where $\\mathbf{A}[i,:]$, $i = 1, ..., N$, is a $1 \\times M$ vector representing the $i$th row of $\\mathbf{A}[i,:]$ and $\\mathbf{A}[:,j]$, $j = 1, ..., M$, is a $N \\times 1$ vector representing the $j$th colunm of $\\mathbf{A}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dessa forma, o produto $\\mathbf{y} = \\mathbf{A} \\mathbf{x}$ pode ser feito de duas maneiras diferentes:"
+    "Once defined these partitions, we can define the product $\\mathbf{y} = \\mathbf{A} \\mathbf{x}$ by using a *doubly nested for*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
-    "*Usando a partição por linhas*\n",
+    "    for i = 1:N\n",
+    "        y[i] = 0\n",
+    "        for j = 1:M\n",
+    "            y[i] = y[i] + A[i,j]*x[j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or by using a *dot product formulation*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    for i = 1:N\n",
+    "        y[i] = dot(A[i,:], x[:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or by using a *linear combination formulation*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    y[:] = 0\n",
+    "    for j = 1:M\n",
+    "        y[:] = y[:] + A[:,j]*x[j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show that these three approaches are equivalent. To do this, follow the steps below:\n",
     "\n",
-    "for $i = 1:N$\n",
-    "\n",
-    "$\\quad \\quad y_{i} = \\mathbf{A}(i,:) \\, \\mathbf{x}$\n",
-    "    \n",
-    "end\n",
-    "\n",
-    "-----"
+    "1. Create a function that implements the first approach and save it in an external file\n",
+    "2. Create a function that implements the second approach and save it in an external file\n",
+    "3. Create a function that implements the third approach and save it in an external file\n",
+    "3. Use the `code-template.ipynb` for testing the three functions against the python code shown below"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ou"
+    "#### Numpy example of the matrix-vector product"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
-    "*Usando a partição por colunas*\n",
-    "\n",
-    "$\\mathbf{y} = \\mathbf{0}$\n",
-    "\n",
-    "for $j = 1:M$\n",
-    "\n",
-    "$\\quad \\quad \\mathbf{y} = \\mathbf{y} + x_{j} \\, \\mathbf{A}(:,j)$\n",
-    "    \n",
-    "end\n",
-    "\n",
-    "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A partição por linhas mostra que o elemento $y_{i}$ do vetor $\\mathbf{y}$ é o produto escalar entre a linha $\\mathbf{A}(i,:)$, $i, ..., N$, da matriz $\\mathbf{A}$ e o vetor $\\mathbf{x}$. Já a partição por colunas mostra que o vetor $\\mathbf{y}$ é a combinação linear das colunas $\\mathbf{A}(:,j)$, $j = 1, ..., M$, de $\\mathbf{A}$. Neste caso, os elementos de $\\mathbf{x}$ são os coeficientes da combinação linear."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Exercício"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Implemente o produto $\\mathbf{A} \\mathbf{x}$ utilizando a partição por linhas e a partição por colunas. **Cada implementação deve estar em uma função diferente**. Ambas as implementações devem, **obrigatoriamente**, utilizar as funções desenvolvidas previamente para o cáculo de produtos entre vetores. **As implementações devem seguir o template da disciplina**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "###Exemplo de implementação em Python"
+    "Import numpy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -144,9 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`y = A.dot(x)` ,\n",
-    "\n",
-    "em que A e x são arrays do numpy."
+    "Create a colunm vector `x` by using the function [numpy.arange](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html) and a row vector `zT` by using the function [numpy.reshape](http://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html)"
    ]
   },
   {
@@ -157,22 +158,41 @@
    },
    "outputs": [],
    "source": [
-    "A = np.array([[1.,2.],\n",
-    "              [3.,4.],\n",
-    "              [5.,6.]])\n",
-    "x = np.array([[7.],\n",
-    "              [8.]])"
+    "x = np.arange(5.)\n",
+    "x = np.reshape(x, (x.size, 1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.],\n",
+       "       [ 1.],\n",
+       "       [ 2.],\n",
+       "       [ 3.],\n",
+       "       [ 4.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y = A.dot(x)"
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a matrix `A` by using the function [numpy.arange](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html) and [numpy.reshape](http://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html)"
    ]
   },
   {
@@ -181,29 +201,300 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 23.]\n",
-      " [ 53.]\n",
-      " [ 83.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print y"
+    "A = np.reshape(np.arange(20.), (4,5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.,   1.,   2.,   3.,   4.],\n",
+       "       [  5.,   6.,   7.,   8.,   9.],\n",
+       "       [ 10.,  11.,  12.,  13.,  14.],\n",
+       "       [ 15.,  16.,  17.,  18.,  19.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the matrix-vector product by using the function [numpy.dot](http://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  30.],\n",
+       "       [  80.],\n",
+       "       [ 130.],\n",
+       "       [ 180.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(A,x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens if the function `numpy.dot` is used to compute the product of the matrix `A` and a vector `y = np.arange(5.)`?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The previously presented algorithm for calculating a simple moving average filter (`first_steps_Python\\SMA\\sma.ipynb`) can be formulated as the product of a matrix $\\mathbf{A}$ and the original data $\\mathbf{x}$, where $\\mathbf{A}$ depends on the number of points forming the moving window and the number of data. For example, consider a data vector $\\mathbf{x}$ given by"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{x} = \\left[ \\begin{array}{c}\n",
+    "x_{1} \\\\\n",
+    "x_{2} \\\\\n",
+    "x_{3} \\\\\n",
+    "x_{4} \\\\\n",
+    "x_{5}\n",
+    "\\end{array} \\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and a moving window formed with size $3$. In this case, the matrix $\\mathbf{A}$ is given by"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A} = \\frac{1}{3} \\, \\left[ \\begin{array}{ccccc}\n",
+    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "1 & 1 & 1 & 0 & 0 \\\\\n",
+    "0 & 1 & 1 & 1 & 0 \\\\\n",
+    "0 & 0 & 1 & 1 & 1 \\\\\n",
+    "0 & 0 & 0 & 0 & 0\n",
+    "\\end{array} \\right] \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hint: how to create $\\mathbf{A}$ automatically?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "N = 5 # number of data\n",
+    "ws = 3 # window size\n",
+    "i0 = ws//2\n",
+    "A = np.array(np.hstack(((1./ws)*np.ones(ws), np.zeros(N - ws + 1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A = np.resize(A, (N-2*i0, N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A = np.vstack((np.zeros(N), A, np.zeros(N)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.33333333,  0.33333333,  0.33333333,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.33333333,  0.33333333,  0.33333333,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.33333333,  0.33333333,  0.33333333],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, the filtered data $\\mathbf{x}_{f}$ can be calculated as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mathbf{x}_{f} = \\mathbf{A} \\, \\mathbf{x} \\: .$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show that this formulation is equivalent to the previously presented one. To do that,\n",
+    "\n",
+    "1. Create a function that calculates the moving average filter by using the matrix-vector product. This function must receive two arguments: the data vector and the number of points forming the moving window. This function must create the matrix $\\mathbf{A}$ and call one of the three functions created in the previous exercise for calculating the matrix-vector product.\n",
+    "2. Use the `code-template.ipynb` to compare the results produced by the function created in the previous step with the results produced by the function created in the previous class for calculating the moving average filter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{y}$ be a $N \\times 1$ vector whose $i$th element $y_{i} = f(x_{i})$, $i = 1, ..., N$, represents a function $f(x)$ evaluated at a point $x_{i}$. Let us also consider that the $N$ points $x_{i}$ are regularly spaced, it means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x_{i} = x_{1} + (i-1)*h \\: , \\quad i = 1, ..., N \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $x_{1}$ is the minimum $x_{i}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, the derivative of the function $f(x)$ with respect to $x$ can be approximated by using a [central finite difference](https://en.wikipedia.org/wiki/Finite_difference) equation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{d \\, f(x_{i})}{d \\, x} \\approx \\frac{f(x_{i} + h) - f(x_{i} - h)}{2 \\, h} \\: , \\quad i = 2, ..., N-1 \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $y_{i+1} = f(x_{i} + h)$ and $y_{i-1} = f(x_{i} - h)$. Notice that the derivative $\\frac{d \\, f(x_{i})}{d \\, x}$ is not calculated at the points $x_{1}$ and $x_{N-1}$. The first derivatives $\\frac{d \\, f(x_{i})}{d \\, x}$ can be calculated as a matrix-vector product $\\mathbf{A} \\, \\mathbf{y}$, where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A} = \\frac{1}{2 \\, h} \\, \\left[ \\begin{array}{c}\n",
+    "0 & 0 & 0 & 0 & \\cdots & 0 \\\\\n",
+    "-1 & 0 & 1 & 0 & \\cdots & 0 \\\\\n",
+    "0 & -1 & 0 & 1 & & 0 \\\\\n",
+    "\\vdots  & & &  &  & \\vdots \\\\\n",
+    "0  &  & -1 & 0 & 1 & 0 \\\\\n",
+    "0  & \\cdots & 0 & -1 & 0 & 1 \\\\\n",
+    "0 & \\cdots & 0 & 0 & 0 & 0\n",
+    "\\end{array} \\right] \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on this introduction,\n",
+    "\n",
+    "1. Create a function that receives a $N \\times 1$ data vector $\\mathbf{y}$ and return the first derivatives calculated according to the matrix-vector product presented above. The function must call one the functions created in the Exercise 1 for calculating the matrix-vector product.\n",
+    "2. Use the `code-template.ipynb` to test this function. Create a vector `theta` with the function [numpy.arange](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*np.pi/1000`. Create a data vector `y` by using the [numpy.sin](http://docs.scipy.org/doc/numpy/reference/generated/numpy.sin.html) function.\n",
+    "3. Calculate a vector `z_true` by using the [numpy.cos](http://docs.scipy.org/doc/numpy/reference/generated/numpy.cos.html) function.\n",
+    "4. Calculate a `z_calc` vector with our function and compare with the `z_true` vector by using the [numpy.allclose](http://docs.scipy.org/doc/numpy/reference/generated/numpy.allclose.html) function. Remember that the first and last elements of `z_calc` will be equal to zero. This fact must be taken into account in the test."
+   ]
   }
  ],
  "metadata": {
