class 4 - matrix-matrix product

--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1"
+    "### Exercise 5"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2"
+    "### Exercise 6"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3"
+    "### Exercise 7"
    ]
   },
   {
@@ -490,11 +490,20 @@
    "source": [
     "Based on this introduction,\n",
     "\n",
-    "1. Create a function that receives a $N \\times 1$ data vector $\\mathbf{y}$ and return the first derivatives calculated according to the matrix-vector product presented above. The function must call one the functions created in the Exercise 1 for calculating the matrix-vector product.\n",
+    "1. Create a function that receives a $N \\times 1$ data vector $\\mathbf{y}$ and return the first derivatives calculated according to the matrix-vector product presented above. The function must call one the functions created in the Exercise 5 for calculating the matrix-vector product.\n",
     "2. Use the `code-template.ipynb` to test this function. Create a vector `theta` with the function [numpy.arange](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*np.pi/1000`. Create a data vector `y` by using the [numpy.sin](http://docs.scipy.org/doc/numpy/reference/generated/numpy.sin.html) function.\n",
     "3. Calculate a vector `z_true` by using the [numpy.cos](http://docs.scipy.org/doc/numpy/reference/generated/numpy.cos.html) function.\n",
     "4. Calculate a `z_calc` vector with our function and compare with the `z_true` vector by using the [numpy.allclose](http://docs.scipy.org/doc/numpy/reference/generated/numpy.allclose.html) function. Remember that the first and last elements of `z_calc` will be equal to zero. This fact must be taken into account in the test."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
