correct an error

--- a/Content/code-template.ipynb
+++ b/Content/code-template.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Brief description of the algorithm"
+    "Brief description of the algorithm to be implemented"
    ]
   },
   {
