include a class about special matrices

--- a/Content/intro_linear_syst.ipynb
+++ b/Content/intro_linear_syst.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Sistemas lineares"
+    "# Linear systems - introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considere o seguinte conjunto de equações:"
+    "Consider the following set o equations:"
    ]
   },
   {
@@ -30,14 +30,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que $y_{i}$, $i = 1, 2, 3$, são [combinações lineares](http://mathworld.wolfram.com/LinearCombination.html) das variáveis  $x_{1}$, $x_{2}$, $x_{3}$. Isso significa que a derivada de $y_{i}$, $i = 1, 2, 3$, em relação a qualquer uma das variáveis $x_{1}$, $x_{2}$, $x_{3}$ é uma constante. Por exemplo, a derivada de $y_{2}$ em relação a $x_{3}$ é igual a $1$."
+    "Notice that $y_{i}$, $i = 1, 2, 3$, are [linear combinations](https://en.wikipedia.org/wiki/Linear_combination) of the variables $x_{1}$, $x_{2}$, $x_{3}$. It means that the derivative of $y_{i}$, $i = 1, 2, 3$, with respect to any variable $x_{1}$, $x_{2}$, $x_{3}$ does not depend on the variables $x_{1}$, $x_{2}$, $x_{3}$. For example, the derivative of $y_{2}$ with respect to $x_{3}$ is equal to $1$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este conjunto de equações pode ser reescrito em notação matricial, da seguinte forma:"
+    "This set of equations can be written in matrix notation as follows:"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que"
+    "where"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "2,4 & -2 & 1 \\\\\n",
     "7,8 & -4,1 & 6,4\n",
     "\\end{array}\n",
-    "\\right]_{3 \\times 3} \\: ,$$"
+    "\\right] \\: ,$$"
    ]
   },
   {
@@ -77,14 +77,14 @@
     "y_{2} \\\\\n",
     "y_{3}\n",
     "\\end{array}\n",
-    "\\right]_{3 \\times 1}$$"
+    "\\right]$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "e"
+    "and"
    ]
   },
   {
@@ -97,40 +97,34 @@
     "x_{2} \\\\\n",
     "x_{3}\n",
     "\\end{array}\n",
-    "\\right]_{3 \\times 1} \\: .$$"
+    "\\right] \\: .$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta equação é comumente denominada sistema de equações lineares ou apenas **sistema linear**."
+    "This equation is commonly called linear system of equations or simply **linear system**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sistemas lineares são muito comuns em problemas de geofísica. Geralmente, $\\mathbf{y}$ contém grandezas observáveis (medidas de anomalia de gravidade, anomalia de campo total, tempo de chegada de ondas sísmicas, componentes horizontal e vertical de campos elétricos e magnéticos, etc.) e, portanto, é conhecido. A matriz $\\mathbf{A}$, normalmente, contém grandezas observáveis secundárias (por exemplo, coordenadas geográficas, tempo, parâmetros de aquisição, etc.) e, portanto, também é conhecida. Já o vetor $\\mathbf{x}$ contém variáveis desconhecidas, ou incógnitas. Estas variáveis são, geralmente, parâmetros que descrevem o sistema físico em estudo. Por exemplo, dimensões de um corpo geológicos, distribuição de velocidades sísmicas, distribuição de resistividade elétrica, etc."
+    "Linear systems are very common in geophysical problems. In general, $\\mathbf{y}$ contains the geophysical data (or observables), e.g., gravity anomaly data, total-field anomaly data, seismic travel times, horizontal and vertical components of the electrical and magnetic fields, etc. Then, $\\mathbf{y}$ is usually known. similarly, the matrix $\\mathbf{A}$ also contains observables (e.g., time, distance, depth to the top of a geological body, etc.). On the other hand, the vector $\\mathbf{x}$ usually contains the unkowns, which are the parameters describing the study system. For example, they can represent the dimensions of a geological body, a seismic velocity distribution, a electrical resistivity distribution, a density contrast distribution, etc. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resolver um sistema linear, portanto, significa determinar o vetor $\\mathbf{x}$ a partir da matriz $\\mathbf{A}$ e do vetor $\\mathbf{y}$. Alguns sistemas lineares são relativamente fáceis de serem resolvidos, tais como os exemplos apresentados abaixo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Exemplo de implementação em Python"
+    "Therefore, solving a linear system means determining the vector $\\mathbf{x}$ from the values of $\\mathbf{A}$ and $\\mathbf{y}$. The complexity of the algorithm used for solving a linear system depends mainly on the structure of the matrix $\\mathbf{A}$.\n",
+    "The [`numpy.linalg`](http://docs.scipy.org/doc/numpy/reference/routines.linalg.html) provides a lot of linear algebra routines. The cells below show an application of the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html#numpy.linalg.solve) for solving a linear system."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -143,14 +137,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`x = np.linalg.solve(A,y)` ,\n",
-    "\n",
-    "em que A e y são arrays do numpy."
+    "Let `A` and `y` be a matrix and a vector defined as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -165,8 +157,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solution of the linear system `Ax = y` is given by:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
