--- a/Content/special_linear_syst.ipynb
+++ b/Content/special_linear_syst.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Sistema diagonal"
+    "## Diagonal system"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Neste sistema linear, os elementos da matriz $\\mathbf{A}$ fora da diagonal principal são nulos:"
+    "In this linear system, the elements outside the  os elementos da matriz $\\mathbf{A}$ fora da diagonal principal são nulos:"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.7"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
