classes of triangular and symmetric matrices

--- a/Content/triangular_matrices.ipynb
+++ b/Content/triangular_matrices.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider two $N \\times N$ matrices $\\mathbf{U}$ and $\\mathbf{U}$ given by:"
+    "Consider two $N \\times N$ matrices $\\mathbf{U}$ and $\\mathbf{L}$ given by:"
    ]
   },
   {
@@ -47,7 +47,7 @@
     "l_{N-2 \\, 1} & \\cdots & l_{N-2\\,N-2} & &\\\\\n",
     "l_{N-1 \\, 1} & \\cdots & l_{N-1\\,N-2} & l_{N-1\\,N-1} &\\\\\n",
     "l_{N1} & \\cdots & l_{N\\,N-2} & l_{N\\,N-1} & l_{N\\,N}\n",
-    "\\end{array} \\right]\n",
+    "\\end{array} \\right] \\: .\n",
     "$$"
    ]
   },
@@ -91,7 +91,7 @@
    "source": [
     "    y[:] = 0\n",
     "    for i = 1:N\n",
-    "        for j = i:M\n",
+    "        for j = i:N\n",
     "            y[i] = y[i] + U[i,j]*x[j]"
    ]
   },
@@ -100,7 +100,7 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        y[i] = dot(U[i,i:],x[i:])"
+    "        y[i] = y[i] + dot(U[i,i:],x[i:])"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        z[i] = dot(L[i,:i],x[:i])"
+    "        z[i] = z[i] + dot(L[i,:i],x[:i])"
    ]
   },
   {
@@ -161,12 +161,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a full matrix by using, for example, the function [`numpy.random.rand`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.random.rand.html#numpy.random.rand)"
+    "Create a full matrix `B` and a vector `x` by using, for example, the functions [`numpy.random.rand`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.random.rand.html#numpy.random.rand) and [`numpy.arange`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -202,7 +202,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 12 13 14 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create an upper triangular matrix `U` by using, for example, the function [`numpy.triu`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.triu.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -235,82 +261,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([11, 12, 13, 14, 15])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "x"
+    "Similarly, create an lower triangular matrix `L` by using, for example, the function [`numpy.tril`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.tril.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([   11.,   150.,   434.,   880.,  1505.])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.dot(L,x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "z = np.empty_like(y)\n",
-    "for i in range(5):\n",
-    "    z[i] = np.dot(L[i,:i+1],x[:i+1])"
+    "L = np.tril(B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([   11.,   150.,   434.,   880.,  1505.])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.   0.   0.   0.   0.]\n",
+      " [  6.   7.   0.   0.   0.]\n",
+      " [ 11.  12.  13.   0.   0.]\n",
+      " [ 16.  17.  18.  19.   0.]\n",
+      " [ 21.  22.  23.  24.  25.]]\n"
+     ]
     }
    ],
    "source": [
-    "z"
+    "print L"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare the results produced by your functions with the function [`numpy.dot`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html)"
    ]
   },
   {
