skect of the next class

--- a/Content/intro_linear_syst.ipynb
+++ b/Content/intro_linear_syst.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the following set o equations:"
+    "Consider the following set of equations:"
    ]
   },
   {
