--- a/Content/triangular_matrices.ipynb
+++ b/Content/triangular_matrices.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a full matrix `B` and a vector `x` by using, for example, the functions [`numpy.random.rand`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.random.rand.html#numpy.random.rand) and [`numpy.arange`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html)"
+    "Create a full matrix `B` and a vector `x` by using, for example, the function [`numpy.arange`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html)"
    ]
   },
   {
