correct the title of symmetric-matrices and outline the gaussian elimination class

--- a/Content/elim-gauss.ipynb
+++ b/Content/elim-gauss.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Eliminação de Gauss"
+    "# Gaussian elimination"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considere o seguinte sistema linear:"
+    "Consider the following linear system:"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que"
+    "where $\\mathbf{A}$ is a $N \\times N$ unstructured matrix given by"
    ]
   },
   {
@@ -41,7 +41,7 @@
     "\\vdots & \\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
     "a_{N1} & a_{N2} & a_{N3} & a_{N4} & \\cdots & a_{NN}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times N} \\: ,$$"
+    "\\right]_{\\, N \\times N} \\: ,$$"
    ]
   },
   {
@@ -55,14 +55,14 @@
     "\\vdots \\\\\n",
     "y_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1}$$"
+    "\\right]_{\\,  \\times 1}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "e"
+    "and"
    ]
   },
   {
@@ -76,14 +76,18 @@
     "\\vdots \\\\\n",
     "x_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1} \\: .$$"
+    "\\right]_{\\, N \\times 1} \\: .$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "É possível transformar este sistema linear em um sistema triangular equivalente, tal como exemplificado abaixo:"
+    "This is a **square and unstructured linear system** because $\\mathbf{A}$ is a general square matrix that is not diagonal, triangular, banded or any other type of structured matrix. \n",
+    "\n",
+    "How to solve this linear system? At this part of the course, we only know how to solve diagonal and triangular systems. It would be useful if this system were tranformed into an equivalent triangular system having the same solution $\\mathbf{x}$ as the unstructured system presented above. We say that this new system is equivalent because the solution is the same and triangular because its matrix is upper triangular.\n",
+    "\n",
+    "**Gaussian elimination** is a numerical procedure applied for transforming a square and unstructured system into this equivalent triangular system, which can be represented as follows: "
    ]
   },
   {
@@ -97,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "em que"
+    "where"
    ]
   },
   {
@@ -113,14 +117,14 @@
     "\\vdots & \\vdots & \\vdots &  & \\ddots & \\vdots \\\\\n",
     "0 & 0 & 0 & 0 & \\cdots & b_{NN}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times N}$$"
+    "\\right]_{\\, N \\times N}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "e"
+    "and"
    ]
   },
   {
@@ -134,14 +138,23 @@
     "\\vdots \\\\\n",
     "z_{N}\n",
     "\\end{array}\n",
-    "\\right]_{N \\times 1} \\: .$$"
+    "\\right]_{\\, N \\times 1} \\: .$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este sistema triangular equivalente tem como solução o mesmo vetor $\\mathbf{x}$ que é solução do sistema linear original. Contudo, este novo sistema pode ser resolvido de forma relativamente fácil, de acordo com o algoritmo descrito em uma aula anterior. A transformação do sistema linear original para o sistema triangular equivalente é feita de forma iterativa, por meio de sucessivas transformações lineares do tipo:"
+    "As pointed out before, this equivalent system has the same solution $\\mathbf{x}$ as the unstructured system. The most striking observation to emerge from Gaussian elimination is that it transforms an unstructured linear system into a triangular system, which can be easily solved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Contudo, este novo sistema pode ser resolvido de forma relativamente fácil, de acordo com o algoritmo descrito em uma aula anterior. A transformação do sistema linear original para o sistema triangular equivalente é feita de forma iterativa, por meio de sucessivas transformações lineares do tipo:"
    ]
   },
   {
@@ -556,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.7"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
