correct small errors

--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -160,8 +160,8 @@
    "source": [
     "    C[:,:] = 0.\n",
     "    for i = 1:N\n",
-    "        for j = 1:M\n",
-    "            for k = 1:L\n",
+    "        for j = 1:L\n",
+    "            for k = 1:M\n",
     "                C[i,j] = C[i,j] + A[i,k]*B[k,j]"
    ]
   },
@@ -177,7 +177,7 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        for j = 1:M\n",
+    "        for j = 1:L\n",
     "            C[i,j] = dot(A[i,:],B[:,j])"
    ]
   },
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    for j = 1:M\n",
+    "    for j = 1:L\n",
     "        C[:,j] = dot(A[:,:],B[:,j])"
    ]
   },
@@ -251,8 +251,8 @@
    "metadata": {},
    "source": [
     "    C[:,:] = 0.\n",
-    "    for k = 1:L\n",
-    "        for j = 1:M\n",
+    "    for k = 1:M\n",
+    "        for j = 1:L\n",
     "            for i = 1:N\n",
     "                C[i,j] = C[i,j] + A[i,k]*B[k,j]"
    ]
@@ -269,8 +269,8 @@
    "metadata": {},
    "source": [
     "    C[:,:] = 0.\n",
-    "    for k = 1:L\n",
-    "        for j = 1:M\n",
+    "    for k = 1:M\n",
+    "        for j = 1:L\n",
     "            C[:,j] = C[:,j] + A[:,k]*B[k,j]"
    ]
   },
@@ -286,7 +286,7 @@
    "metadata": {},
    "source": [
     "    C[:,:] = 0.\n",
-    "    for k = 1:L\n",
+    "    for k = 1:M\n",
     "        C[:,:] = C[:,:] + outer(A[:,k],B[k,:])"
    ]
   },
