exercises of gaussian elimination with partial pivoting

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -604,6 +604,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For convenience, let's define $\\tilde{\\mathbf{C}}^{(k-1)} = \\mathbf{P}^{(k)} \\mathbf{C}^{(k-1)}$. Then, the computation of  $\\tilde{\\mathbf{C}}^{(k-1)}$ can be rewritten as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{C}^{(k)} &= \\left( \\mathbf{I} - \\mathbf{M}^{(k)} \\right) \\tilde{\\mathbf{C}}^{(k-1)} \\\\\\\\\n",
+    "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{M}^{(k)}\\tilde{\\mathbf{C}}^{(k-1)} \\\\\\\\\n",
+    "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{t}^{(k)} \\otimes \\left(\\mathbf{u}^{(k)}\\right)^{\\top}\\tilde{\\mathbf{C}}^{(k-1)} \\\\\\\\\n",
+    "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{t}^{(k)} \\otimes \\tilde{\\mathbf{C}}^{(k-1)}\n",
+    "\\left[ \\, k \\, , \\, : \\, \\right]\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that $\\mathbf{t}^{(k)} \\left[ \\, : k\\right] = 0$. Then, we may simplify the computations as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{C}^{(k)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] = \n",
+    "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] - \n",
+    "\\mathbf{t}^{(k)} \\left[ \\, k+1 : \\, \\right] \\otimes \n",
+    "\\tilde{\\mathbf{C}}^{(k-1)}\n",
+    "\\left[ \\, k \\, , \\, k+1 : \\, \\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, instead of storing the Gauss multipliers in the Gauss vector $\\mathbf{t}^{(k)} \\left[ \\, k+1 : \\, \\right]$, we may store them below the main diagonal of the matrix $\\tilde{\\mathbf{C}}^{(k-1)}$, e.g.,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k \\, \\right] = \n",
+    "\\mathbf{t}^{(k)} \\left[ \\, k+1 : \\, \\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and, consequently,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{C}^{(k)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] = \n",
+    "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] - \n",
+    "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k \\, \\right] \\otimes \n",
+    "\\tilde{\\mathbf{C}}^{(k-1)}\n",
+    "\\left[ \\, k \\, , \\, k+1 : \\, \\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The Gaussian elimination with partial pivoting can be implemented as follows:"
    ]
   },
@@ -617,7 +696,7 @@
     "    \n",
     "    for i = 1:N-1\n",
     "        \n",
-    "        # permutation step\n",
+    "        # permutation step (computation of C tilde)\n",
     "        p, C = np.permut(C, i)\n",
     "        D = D[p]\n",
     "        \n",
@@ -629,7 +708,7 @@
     "        C[i+1:,i] = C[i+1:,i]/C[i,i]\n",
     "        \n",
     "        # zeroing of the elements in the ith column\n",
-    "        C[i+1:,i+1:] = C[i+1:,i+1:] - outer(C[i+1:N,i], C[i,i+1:])\n",
+    "        C[i+1:,i+1:] = C[i+1:,i+1:] - outer(C[i+1:,i], C[i,i+1:])\n",
     "        \n",
     "        return C[:,:N], C[:,N]"
    ]
@@ -654,194 +733,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def permut(C,i):\n",
-    "    P = [j for j in range(C.shape[0])]\n",
-    "    imax = i + np.argmax(np.abs(C[i:,i]))\n",
-    "    P[i], P[imax] = P[imax], P[i]\n",
-    "    return P, C[P,:]"
+    "### Exercise 14"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def outer(x,y):\n",
-    "    C = np.zeros((x.ravel().size,y.ravel().size))\n",
-    "    for i, c in enumerate(C):\n",
-    "        c += x[i]*y.ravel()\n",
-    "    return C"
+    "1. Implement the Gaussian elimination with partial pivoting to calculate the equivalent triangular system. The code must use the outer product function that was previously implemented. The code must receive the matrix `A` and the vector `y` and return the matrix `B` and the vector `z`. The Gauss multipliers must be stored below the diagonal of `B`.\n",
+    "\n",
+    "2. Use your previous function for solving the equivalent (upper) triangular system `Bx = z`.\n",
+    "\n",
+    "3. Use the `code-template.ipynb` to test your code against `np.dot(A,y)`."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "N = y.size\n",
-    "C = np.hstack((A, y))\n",
-    "D = np.identity(N)"
+    "### Exercise 15"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "for i in range(N-1):\n",
-    "    \n",
-    "    p, C = permut(C,i)\n",
-    "    D = D[p]\n",
-    "        \n",
-    "    C[i+1:,i] = C[i+1:,i]/C[i,i]\n",
-    "    C[i+1:,i+1:] = C[i+1:,i+1:] - outer(C[i+1:,i], C[i,i+1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  1.],\n",
-       "       [ 1.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ -3.        ,  -1.        ,   2.        , -11.        ],\n",
-       "       [  0.66666667,   1.66666667,   0.66666667,   4.33333333],\n",
-       "       [ -0.66666667,   0.2       ,   0.2       ,  -0.2       ]])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "P, L, U = lu(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  1.],\n",
-       "       [ 1.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.]])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "P"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        ,  0.        ,  0.        ],\n",
-       "       [ 0.66666667,  1.        ,  0.        ],\n",
-       "       [-0.66666667,  0.2       ,  1.        ]])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "L"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-3.        , -1.        ,  2.        ],\n",
-       "       [ 0.        ,  1.66666667,  0.66666667],\n",
-       "       [ 0.        ,  0.        ,  0.2       ]])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "U"
+    "1. Use your functions for calculating the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse column by column.\n",
+    "\n",
+    "2. Use the `code-template.ipynb` to test your code against `np.inv(A)`."
    ]
   },
   {
